--- a/ubuntu-java8/Dockerfile
+++ b/ubuntu-java8/Dockerfile
@@ -1,4 +1,6 @@
 FROM radut/ubuntu-ssh-rsync-curl
+MAINTAINER Radu Toader radu.m.toader@gmail.com
+
 RUN \
   apt-get update && \
   DEBIAN_FRONTEND=noninteractive apt-get -y install python-software-properties software-properties-common curl && \
