--- a/ubuntu-ssh-rsync-curl/Dockerfile
+++ b/ubuntu-ssh-rsync-curl/Dockerfile
@@ -1,4 +1,6 @@
 FROM ubuntu:latest
+MAINTAINER Radu Toader radu.m.toader@gmail.com
+
 RUN DEBIAN_FRONTEND=noninteractive apt-get update && apt-get -y upgrade && apt-get -y install rsync curl jq
 COPY letsencrypt /usr/local/share/ca-certificates/
 RUN update-ca-certificates
