--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,8 @@ build:
   stage: build
   retry: 2
   allow_failure: false
+  tags:
+    - radut-docker-ci
   script:
     - bash build-all.sh
 
@@ -23,6 +25,8 @@ push:
   when: manual
   retry: 2
   allow_failure: false
+  tags:
+    - radut-docker-ci
   script:
     - docker login -u ${DOCKER_USER} -p ${DOCKER_PASSWORD}
     - bash push-all.sh
