--- a/ubuntu-ssh-rsync-curl-git-cpio-letsencrypt_ca/Dockerfile
+++ b/ubuntu-ssh-rsync-curl-git-cpio-letsencrypt_ca/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:latest
 MAINTAINER Radu Toader radu.m.toader@gmail.com
 
-RUN DEBIAN_FRONTEND=noninteractive apt-get update && apt-get -y upgrade && apt-get -y install unzip zip rsync curl git cpio bzip2 jq vim net-tools iputils-ping telnet netcat pkg-config libfontconfig1-dev
+RUN DEBIAN_FRONTEND=noninteractive apt-get update && apt-get -y upgrade && apt-get -y install unzip zip rsync curl git cpio bzip2 jq vim net-tools iputils-ping telnet netcat pkg-config libfontconfig1-dev gettext
 COPY letsencrypt /usr/local/share/ca-certificates/
 RUN update-ca-certificates
