--- a/ubuntu-oracle-java9-letsencrypt_ca-maven-node-lts/Dockerfile
+++ b/ubuntu-oracle-java9-letsencrypt_ca-maven-node-lts/Dockerfile
@@ -26,7 +26,7 @@ ENV NODE_VERSION 8.10.0
 RUN ARCH= && dpkgArch="$(dpkg --print-architecture)" \
   && case "${dpkgArch##*-}" in \
     amd64) ARCH='x64';; \
-    ppc64el) ARCH='ppc64le';; \
+    ppc64el) ARCH='ppc64le';; \python-software-properties
     s390x) ARCH='s390x';; \
     arm64) ARCH='arm64';; \
     armhf) ARCH='armv7l';; \
