--- a/ubuntu-ssh-rsync-curl-git-cpio-letsencrypt_ca/Dockerfile
+++ b/ubuntu-ssh-rsync-curl-git-cpio-letsencrypt_ca/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:latest
+FROM ubuntu:18.04
 MAINTAINER Radu Toader radu.m.toader@gmail.com
 
 RUN DEBIAN_FRONTEND=noninteractive apt-get update && apt-get -y upgrade && apt-get -y install unzip zip rsync curl git cpio bzip2 jq vim net-tools iputils-ping telnet netcat pkg-config libfontconfig1-dev gettext sendemail libnet-ssleay-perl libio-socket-ssl-perl
