--- a/ubuntu-openjdk-java11-letsencrypt_ca/Dockerfile
+++ b/ubuntu-openjdk-java11-letsencrypt_ca/Dockerfile
@@ -20,8 +20,8 @@ RUN rngd -r /dev/urandom
 COPY letsencrypt /usr/local/share/ca-certificates/
 RUN update-ca-certificates
 
-RUN printf 'changeit\nchangeit\nyes' | keytool -import -file  /usr/local/share/ca-certificates/lets-encrypt-x1-cross-signed.crt -alias lets-encrypt-x1-cross-signed -keystore /etc/ssl/certs/java/cacerts
-RUN printf 'changeit\nchangeit\nyes' | keytool -import -file  /usr/local/share/ca-certificates/lets-encrypt-x2-cross-signed.crt -alias lets-encrypt-x2-cross-signed -keystore /etc/ssl/certs/java/cacerts
-RUN printf 'changeit\nchangeit\nyes' | keytool -import -file  /usr/local/share/ca-certificates/lets-encrypt-x3-cross-signed.crt -alias lets-encrypt-x3-cross-signed -keystore /etc/ssl/certs/java/cacerts
-RUN printf 'changeit\nchangeit\nyes' | keytool -import -file  /usr/local/share/ca-certificates/lets-encrypt-x4-cross-signed.crt -alias lets-encrypt-x4-cross-signed -keystore /etc/ssl/certs/java/cacerts
-RUN printf 'changeit\nchangeit\nyes' | keytool -import -file  /usr/local/share/ca-certificates/IdenTrust-root.crt -alias IdenTrust-root -keystore /etc/ssl/certs/java/cacerts
+#RUN printf 'changeit\nchangeit\nyes' | keytool -import -file  /usr/local/share/ca-certificates/lets-encrypt-x1-cross-signed.crt -alias lets-encrypt-x1-cross-signed -keystore /etc/ssl/certs/java/cacerts
+#RUN printf 'changeit\nchangeit\nyes' | keytool -import -file  /usr/local/share/ca-certificates/lets-encrypt-x2-cross-signed.crt -alias lets-encrypt-x2-cross-signed -keystore /etc/ssl/certs/java/cacerts
+#RUN printf 'changeit\nchangeit\nyes' | keytool -import -file  /usr/local/share/ca-certificates/lets-encrypt-x3-cross-signed.crt -alias lets-encrypt-x3-cross-signed -keystore /etc/ssl/certs/java/cacerts
+#RUN printf 'changeit\nchangeit\nyes' | keytool -import -file  /usr/local/share/ca-certificates/lets-encrypt-x4-cross-signed.crt -alias lets-encrypt-x4-cross-signed -keystore /etc/ssl/certs/java/cacerts
+#RUN printf 'changeit\nchangeit\nyes' | keytool -import -file  /usr/local/share/ca-certificates/IdenTrust-root.crt -alias IdenTrust-root -keystore /etc/ssl/certs/java/cacerts
