--- a/ubuntu-ssh-rsync-curl-git-cpio-letsencrypt_ca-terraform-ansible/Dockerfile
+++ b/ubuntu-ssh-rsync-curl-git-cpio-letsencrypt_ca-terraform-ansible/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:18.04
 MAINTAINER Radu Toader radu.m.toader@gmail.com
 
-RUN DEBIAN_FRONTEND=noninteractive apt-get update && apt-get -y upgrade && apt-get -y install rsync sshpass curl git cpio bzip2 jq vim net-tools iputils-ping telnet netcat pkg-config libfontconfig1-dev python-pip wget unzip && pip install jinja2 pbr hvac ansible-modules-hashivault netaddr yasha ansible==2.7.5.0 os_client_config==1.28.0 shade==1.26.0 netaddr notario
+RUN DEBIAN_FRONTEND=noninteractive apt-get update && apt-get -y upgrade && apt-get -y install rsync sshpass curl git cpio bzip2 jq vim net-tools iputils-ping telnet netcat pkg-config libfontconfig1-dev python-pip wget unzip && pip install jinja2 pbr hvac ansible-modules-hashivault netaddr yasha ansible==2.7.5.0 os_client_config==1.28.0 shade==1.26.0 netaddr notario openstacksdk python-openstacksdk
 COPY letsencrypt /usr/local/share/ca-certificates/
 RUN update-ca-certificates
 
