--- a/openjdk-11-maven-nodejs/Dockerfile
+++ b/openjdk-11-maven-nodejs/Dockerfile
@@ -1,4 +1,4 @@
-FROM radut/openjdk-java11-letsencrypt_ca-maven
+FROM radut/openjdk-11-maven
 MAINTAINER Radu Toader radu.m.toader@gmail.com
 
 RUN groupadd --gid 1000 node \
