--- a/terraform-ansible/Dockerfile
+++ b/terraform-ansible/Dockerfile
@@ -1,7 +1,8 @@
 FROM ubuntu:18.04
 MAINTAINER Radu Toader radu.m.toader@gmail.com
 
-ARG ANSIBLE_VERSION=2.7.8.0
+ARG ANSIBLE_VERSION=2.8.1.0
+#ARG ANSIBLE_VERSION=2.7.8.0
 ARG TERRAFORM_VERSION=0.11.11
 
 ARG KUBECTL_VERSION=v1.15.0
