--- a/openjdk-11-maven-nodejs/Dockerfile
+++ b/openjdk-11-maven-nodejs/Dockerfile
@@ -23,6 +23,7 @@ RUN set -ex \
     gpg --keyserver hkp://pgp.mit.edu:80 --recv-keys "$key" ; \
   done
 
+ENV NODE_VERSION ${NODE_VERSION}
 
 RUN ARCH= && dpkgArch="$(dpkg --print-architecture)" \
   && case "${dpkgArch##*-}" in \
