--- a/oracle-jdk8-maven-nodejs/Dockerfile
+++ b/oracle-jdk8-maven-nodejs/Dockerfile
@@ -24,6 +24,7 @@ RUN set -ex \
     gpg --keyserver hkp://pgp.mit.edu:80 --recv-keys "$key" ; \
   done
 
+ENV NODE_VERSION ${NODE_VERSION}
 
 RUN ARCH= && dpkgArch="$(dpkg --print-architecture)" \
   && case "${dpkgArch##*-}" in \
