--- a/openjdk-12/Dockerfile
+++ b/openjdk-12/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER Radu Toader radu.m.toader@gmail.com
 
 RUN \
   apt-get update && \
-  DEBIAN_FRONTEND=noninteractive apt-get -y install software-properties-common curl && \
+  DEBIAN_FRONTEND=noninteractive apt-get -y install software-properties-common ca-certificates curl && \
   add-apt-repository ppa:openjdk-r/ppa && \
   apt-get update && \
   apt-get install -y ca-certificates-java && \
