--- a/terraform-ansible/Dockerfile
+++ b/terraform-ansible/Dockerfile
@@ -3,7 +3,8 @@ MAINTAINER Radu Toader radu.m.toader@gmail.com
 
 #ARG ANSIBLE_VERSION=2.8.1.0
 ARG ANSIBLE_VERSION=2.7.8.0
-ARG TERRAFORM_VERSION=0.11.11
+#ARG TERRAFORM_VERSION=0.11.11
+ARG TERRAFORM_VERSION=0.12.9
 
 ARG KUBECTL_VERSION=v1.15.0
 ARG HELM_VERSION=v2.14.1
