--- a/terraform-ansible/Dockerfile
+++ b/terraform-ansible/Dockerfile
@@ -8,7 +8,8 @@ ARG ANSIBLE_VERSION=2.7.12
 ARG TERRAFORM_VERSION=0.12.24
 
 ARG KUBECTL_VERSION=v1.16.0
-ARG HELM_VERSION=v2.14.3
+#ARG HELM_VERSION=v2.14.3
+ARG HELM_VERSION=v3.1.0
 
 #pip install --default-timeout=300
 RUN export PIP_DEFAULT_TIMEOUT=300
