--- a/terraform-ansible/Dockerfile
+++ b/terraform-ansible/Dockerfile
@@ -3,7 +3,8 @@ MAINTAINER Radu Toader radu.m.toader@gmail.com
 
 #ARG ANSIBLE_VERSION=2.8.1.0
 #ARG ANSIBLE_VERSION=2.7.8.0
-ARG ANSIBLE_VERSION=2.7.12
+#ARG ANSIBLE_VERSION=2.7.12
+ARG ANSIBLE_VERSION=2.9.6
 #ARG TERRAFORM_VERSION=0.11.11
 ARG TERRAFORM_VERSION=0.12.24
 
@@ -15,7 +16,9 @@ ARG HELM_VERSION=v3.1.0
 RUN export PIP_DEFAULT_TIMEOUT=300
 ENV PIP_DEFAULT_TIMEOUT=300
 
-RUN DEBIAN_FRONTEND=noninteractive apt-get update && apt-get -y upgrade && apt-get -y install apt-utils rsync sshpass curl git cpio bzip2 jq vim net-tools iputils-ping telnet netcat pkg-config libfontconfig1-dev python-pip wget unzip && pip install jinja2 pbr hvac ansible-modules-hashivault netaddr yasha ansible==${ANSIBLE_VERSION} os_client_config==1.28.0 shade==1.32.0 netaddr notario openstacksdk python-openstacksdk python-openstackclient
+ADD openstack.txt openstack.txt
+
+RUN DEBIAN_FRONTEND=noninteractive apt-get update && apt-get -y upgrade && apt-get -y install apt-utils rsync sshpass curl git cpio bzip2 jq vim net-tools iputils-ping telnet netcat pkg-config libfontconfig1-dev python-pip wget unzip && pip install jinja2 hvac ansible-modules-hashivault yasha ansible==${ANSIBLE_VERSION} os_client_config shade notario && pip install -r openstack.txt
 COPY letsencrypt /usr/local/share/ca-certificates/
 RUN update-ca-certificates
 
